--- a/css/style.scss
+++ b/css/style.scss
@@ -72,3 +72,34 @@ h1,h2{
     color: $error;
 }
 
+.addTaskField{
+    position: relative;
+    padding: 15px;
+    background: #0a9ecd;
+    input{
+        display: inline-block;
+        width: calc(100% - 30px);
+        border: 1px solid rgb(14, 106, 33);
+        
+        &:hover{
+         outline: none;   
+        }
+    }
+  
+    button{
+        position: absolute;
+        width: 28px;
+        height: 28px;
+        border-radius: 12%;
+        right: 29px;
+        border:2px solid #0a9ecd;
+        border: none;
+        padding: 0;
+     }
+     span{
+        font-size: 12px;
+     }
+}
+.complete{
+    text-decoration: line-through;
+}
